#[patch.crates-io]
#anyhow = { path = "https:/www.github.com/dtolnay/anyhow" }

[package]
name = "cargo-forkdep"
version = "0.1.0"
edition = "2021"
description = "Does the initial grunt work to help you develop a patch for one of your dependencies"
license = "MIT OR Apache-2.0"
keywords = ["development", "patch", "git"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.62.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.14"
octocrab = "0.16.0"
cargo = "0.63.1"
anyhow = "1.0.60"
clap = { version = "3.2.16", features = ["derive"] }
toml_edit = "0.14.4"
once_cell = "1.13.0"
tokio = { version = "1.20.1", features = ["rt", "macros"] }
